--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 The team behind the project
-wakjira Tadese<wakjirabekele2018@gmail.com>
-Oloniyo Sunday
+Bedasa Wayessa <bedonaf@gmail.com>
+Ayoub Eladib
